--- a/index.html
+++ b/index.html
@@ -300,39 +300,36 @@
        BOTÃO DE CENTRALIZAR LOCALIZAÇÃO (Estilo Google Maps)
        =========================== */
     .gps-center-button {
-        position: absolute !important;
-        bottom: 180px !important; /* Acima dos controles de zoom */
-        right: 10px !important;
-        background-color: #fff !important;
-        border: 0 !important;
-        border-radius: 2px !important;
-        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3) !important;
-        cursor: pointer !important;
-        width: 40px !important;
-        height: 40px !important;
-        padding: 0 !important;
-        display: flex !important;
-        align-items: center !important;
-        justify-content: center !important;
-        transition: background-color 0.2s ease !important;
-        z-index: 1 !important;
+        background-color: #fff;
+        border: 0;
+        border-radius: 2px;
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        padding: 0;
+        margin: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: background-color 0.2s ease;
     }
 
     .gps-center-button:hover {
-        background-color: #f5f5f5 !important;
+        background-color: #f5f5f5;
     }
 
     .gps-center-button:active {
-        background-color: #e8e8e8 !important;
+        background-color: #e8e8e8;
     }
 
     .gps-center-button .material-icons {
-        color: #666 !important;
-        font-size: 20px !important;
+        color: #666;
+        font-size: 20px;
     }
 
     .gps-center-button.active .material-icons {
-        color: #4285F4 !important;
+        color: #4285F4;
     }
 
     /* ===========================
